Added 3 sections: sale2, sale3 and article

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </nav>
     <section class="header">
         <div class="container">
-            <div class="flex__wrapper">
-                <div class="header__text text-column">
+            <div class="columns">
+                <div class="columns_first text-column">
                     <h1 class="title text-column__title">
                         BEST SELLING<br>STRETCH SHORTS
                     </h1>
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__pic picture-in-rect">
+                <div class="columns_last picture-in-rect">
                     <div class="picture-in-rect__img">
                         <img src="./img/header.png" alt="styly man">
                     </div>
@@ -133,27 +133,117 @@
     </section>
     <section class="bestseller">
         <div class="container">
-            <div class="flex__wrapper">
-                <div class="bestseller__pic picture-in-rect">
+            <div class="columns">
+                <div class="columns_first picture-in-rect">
                     <div class="picture-in-rect__img bestseller__img">
                         <img src="./img/best-pants.png" alt="best selling pants">
                     </div>
                     <div class="picture-in-rect__rect picture-in-rect__rect_up"></div>
                     <div class="picture-in-rect__rect picture-in-rect__rect_down"></div>
                 </div>
-                <div class="bestseller__text text-column">
-                    <h1 class="title text-column__title">
+                <div class="columns_last text-column">
+                    <h2 class="title text-column__title">
                         OUR BESTSELLING PANTS
-                    </h1>
+                    </h2>
                     <p class="text-column__description">
                         Our classic cargo pants are built to last and designed to exceed your expectations! 
                         From Frequent Traveler to Hatteras to Trinidad, we have the perfect fit for you!
                     </p>
-                    <div class="text-column__btn">
-                        <div class="btn">
-                            SHOP ALL SHORTS
+                    <div class="text-column__btn btn">
+                        SHOP ALL SHORTS
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sale2">
+        <div class="container">
+            <div class="container_small">
+                <div class="columns">
+                    <div class="category-card sale2__card">
+                        <div class="category-card__img">
+                            <img src="./img/categories/image1.png" alt="styly man">
+                            <h4 class="category-card__title subtitle">
+                                ECOTHS: NOW 30% OFF!
+                            </h4>
+                        </div>
+                        <p class="category-card__text">
+                            Our entire Ecoths collection is on sale! 
+                            Plus, for every Ecoths purchase we donate 3 meals to food banks across the United States. 
+                            We’re over 400,000 meals in now.
+                        </p>
+                        <div class="category-card__btn btn">
+                            SHOP ECOTHS SALE
                         </div>
                     </div>
+                    <div class="category-card sale2__card">
+                        <div class="category-card__img">
+                            <img src="./img/categories/image2.png" alt="styly man">
+                            <h4 class="category-card__title subtitle">
+                                NEW POWELL PRINT SHIRT
+                            </h4>
+                        </div>
+                        <p class="category-card__text">
+                            New from Old Ranch Brands, the Powell short sleeve print shirt! 
+                            Look effortlessly sharp in this lightweight cotton shirt with a classic shape and convenient features.
+                        </p>
+                        <div class="category-card__btn btn">
+                            SHOP POWEL SHORT SLEEVE
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="article">
+        <div class="container">
+            <div class="container_small">
+                <div class="text-column article__column">
+                    <h2 class="title text-column__title">
+                        SPORTIF ORIGINAL PANT                    
+                    </h2>
+                    <p class="text-column__description">
+                        Our classic nautical cargo pants are built to last and designed to exceed your expectations! 
+                        Crafted from our stretch twill blend that offers the comfort of cotton, 
+                        the wrinkle resistance of polyester and the mobility of Lycra®.
+                    </p>
+                    <div class="btn-red text-column__btn ">
+                        SHOP SPORTIF ORIGINAL PANT
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sale3">
+        <div class="container">
+            <div class="sale3__bg">
+                <h3 class="sale3__title title">
+                    STAY IN TREND WITH SPORTIF
+                </h3>
+                <div class="container_small">
+                    <ul class="sale3__products">
+                        <li class="sale3__product product-card">
+                            <img src="./img/products/belts.png" alt="belts" class="product-card__img">
+                            <h3 class="product-card__title subtitle">
+                                Don't Forget a Belt!
+                            </h3> 
+                            <div class="btn-red">SHOP ALL BELTS</div>
+                        </li>
+                        <li class="sale3__product product-card">
+                            <img src="./img/products/swim.png" alt="swim" class="product-card__img">
+                            <h3 class="product-card__title subtitle">
+                                Swim Trunk Styles on Sale!
+                            </h3> 
+                            <div class="btn-red">SHOP ALL SWIM TRUNKS</div>
+                        </li>
+                        <li class="sale3__product product-card">
+                            <img src="./img/products/catalog.png" alt="catalog" class="product-card__img">
+                            <h3 class="product-card__title subtitle">
+                                Shop Newest Online Catalog
+                            </h3> 
+                            <div class="btn-red">SHOP NEWEST CATALOG</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
