--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                 </div>
                 <div class="nav__navigation">
                     <ul class="nav__menu"> 
-                        <li class="nav__item"><a href="#">sports</a></li>
-                        <li class="nav__item"><a href="#">pants</a></li>
-                        <li class="nav__item"><a href="#">shirts</a></li>
-                        <li class="nav__item"><a href="#">accessories</a></li>
-                        <li class="nav__item"><a href="#">sale</a></li>
+                        <li class="nav__item"><a href="#shorts">shorts</a></li>
+                        <li class="nav__item"><a href="#pants">pants</a></li>
+                        <li class="nav__item"><a href="#shirts">shirts</a></li>
+                        <li class="nav__item"><a href="#accessories">accessories</a></li>
+                        <li class="nav__item"><a href="#sale">sale</a></li>
                     </ul>
                     <div class="nav__search">
                         <input class="search" type="text" id="main__search" placeholder="search entire store here">
@@ -33,7 +33,8 @@
             </div>
         </div>
     </nav>
-    <section class="header">
+    <a class="up-btn" href="#"></a>
+    <section id="shorts" class="header">
         <div class="container">
             <div class="columns">
                 <div class="columns_first text-column">
@@ -57,7 +58,7 @@
             </div>
         </div>
     </section>
-    <section class="sale">
+    <section id="sale" class="sale">
         <div class="container">
             <h4 class="sale__subtitle subtitle">
                 TGIF, INLET, AND MARCHAL'S COLLECTIONS
@@ -131,7 +132,7 @@
             </ul>
         </div>
     </section>
-    <section class="bestseller">
+    <section id="pants" class="bestseller">
         <div class="container">
             <div class="columns">
                 <div class="columns_first picture-in-rect">
@@ -156,7 +157,7 @@
             </div>
         </div>
     </section>
-    <section class="sale2">
+    <section id="shirts" class="sale2">
         <div class="container">
             <div class="container_small">
                 <div class="columns">
@@ -214,7 +215,7 @@
             </div>
         </div>
     </section>
-    <section class="sale3">
+    <section id="accessories" class="sale3">
         <div class="container">
             <div class="sale3__bg">
                 <h3 class="sale3__title title">
@@ -248,5 +249,76 @@
             </div>
         </div>
     </section>
+    <section id="about" class="about">
+        <div class="container">
+            <div class="about__bg">
+                <img class="about__mark" src="./img/excellence.svg" alt="50 years of excellence">
+                <h2 class="title about__title">
+                    FAMILY OWNED LEGACY
+                </h2>
+                <p class="about__description">
+                    We are proud to celebrate over 50 years of excellence as a family owned and operated business.
+                </p>
+                <div id="aboutUsBtn" class="about__btn btn">
+                    ABOUT US
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <div class="footer__columns columns">
+                <div class="footer__column">
+                    <h4 class="footer__title subtitle">ORDERING ONLINE</h4>
+                    <ul class="footer__list">
+                        <li><a href="#" class="footer__item">Account Login</a></li>
+                        <li><a href="#" class="footer__item">Our Guarantee</a></li>
+                        <li><a href="#" class="footer__item">Sportif Stretch Guide</a></li>
+                        <li><a href="#" class="footer__item">Size Chart & Sizing Information</a></li>
+                        <li><a href="#" class="footer__item">Hemming Information</a></li>
+                        <li><a href="#" class="footer__item">Ordering & Payment</a></li>
+                        <li><a href="#" class="footer__item">Shipping Information</a></li>
+                        <li><a href="#" class="footer__item">Returns</a></li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h4 class="footer__title subtitle">ABOUT SPORTIF</h4>
+                    <ul class="footer__list">
+                        <li><a href="#" class="footer__item">COVID-19 Response</a></li>
+                        <li><a href="#" class="footer__item">History</a></li>
+                        <li><a href="#" class="footer__item">Legacy</a></li>
+                        <li><a href="#" class="footer__item">Good Sam Program</a></li>
+                        <li><a href="#" class="footer__item">Privacy & Security</a></li>
+                        <li><a href="#" class="footer__item">Terms & Conditions</a></li>
+                        <li><a href="#" class="footer__item">SCareers</a></li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h4 class="footer__title subtitle">QUICK LINKS</h4>
+                    <ul class="footer__list">
+                        <li><a href="#" class="footer__item">FAQs</a></li>
+                        <li><a href="#" class="footer__item">Shop Online Catalog</a></li>
+                        <li><a href="#" class="footer__item">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="footer__column">
+                    <h4 class="footer__title subtitle">GET TO KNOW US</h4>
+                    <p class="footer__text">
+                        Sign up for our weekly newsletter and get a 10% off coupon by email for your first order!<br><br>
+                        Sign Up for Our Newsletter:
+                    </p>
+                    <form class="footer__form">
+                        <input type="email" name="email" id="email" placeholder="email address">
+                        <input type="button" value="subscribe" class="footer__btn btn-red">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="rights">
+        <div class="container">
+            <p class="rights__sign">©2021 Sportif Mailorder. All Rights Reserved.</p>
+        </div>
+    </div>
 </body>
 </html>
