Added links between main page and catalog

--- a/catalog.html
+++ b/catalog.html
@@ -12,21 +12,22 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
 </head>
 <body>
+
     <nav>
         <div class="container">
             <div class="nav">
                 <div class="nav__logo">
-                    <a href="#">
+                    <a href="./#">
                         <img class="logo" src="./img/logo.png" alt="Sprtif">
                     </a>
                 </div>
                 <div class="nav__navigation">
                     <ul class="nav__menu"> 
-                        <li class="nav__item"><a href="#shorts">shorts</a></li>
-                        <li class="nav__item"><a href="#pants">pants</a></li>
-                        <li class="nav__item"><a href="#shirts">shirts</a></li>
-                        <li class="nav__item"><a href="#accessories">accessories</a></li>
-                        <li class="nav__item"><a href="#sale">sale</a></li>
+                        <li class="nav__item"><a href="./#shorts">shorts</a></li>
+                        <li class="nav__item"><a href="./#pants">pants</a></li>
+                        <li class="nav__item"><a href="./#shirts">shirts</a></li>
+                        <li class="nav__item"><a href="./#accessories">accessories</a></li>
+                        <li class="nav__item"><a href="./#sale">sale</a></li>
                     </ul>
                     <div class="nav__search">
                         <input class="search" type="text" id="main__search" placeholder="search entire store here">
@@ -39,7 +40,7 @@
     <header class="catalog__header">
         <div class="container catalog__wrapper">
             <div class="catalog__breadcrumbs breadcrumbs">
-                <a href="#" class="breadcrumbs__home">home</a>
+                <a href="/#" class="breadcrumbs__home">home</a>
                 <a href="#" class="breadcrumbs__next-page">shorts</a>
             </div>
             <div class="catalog__search title">
