--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <script src="./code/script.js"></script>
 </head>
 <body>
     <nav>
@@ -45,7 +46,7 @@
                     </h1>
                     <p class="text-column__description">Get the perfect fit with 6 different inseam lengths.</p>
                     <div class="text-column__btn">
-                        <div class="btn">
+                        <div class="btn to-catalog">
                             SHOP ALL SHORTS
                         </div>
                     </div>
@@ -152,7 +153,7 @@
                         Our classic cargo pants are built to last and designed to exceed your expectations! 
                         From Frequent Traveler to Hatteras to Trinidad, we have the perfect fit for you!
                     </p>
-                    <div class="text-column__btn btn">
+                    <div class="text-column__btn btn to-catalog">
                         SHOP ALL SHORTS
                     </div>
                 </div>
@@ -175,7 +176,7 @@
                             Plus, for every Ecoths purchase we donate 3 meals to food banks across the United States. 
                             We’re over 400,000 meals in now.
                         </p>
-                        <div class="category-card__btn btn">
+                        <div class="category-card__btn btn to-catalog">
                             SHOP ECOTHS SALE
                         </div>
                     </div>
@@ -190,7 +191,7 @@
                             New from Old Ranch Brands, the Powell short sleeve print shirt! 
                             Look effortlessly sharp in this lightweight cotton shirt with a classic shape and convenient features.
                         </p>
-                        <div class="category-card__btn btn">
+                        <div class="category-card__btn btn to-catalog">
                             SHOP POWEL SHORT SLEEVE
                         </div>
                     </div>
@@ -210,7 +211,7 @@
                         Crafted from our stretch twill blend that offers the comfort of cotton, 
                         the wrinkle resistance of polyester and the mobility of Lycra®.
                     </p>
-                    <div class="btn-red text-column__btn ">
+                    <div class="btn-red text-column__btn to-catalog">
                         SHOP SPORTIF ORIGINAL PANT
                     </div>
                 </div>
@@ -230,21 +231,21 @@
                             <h3 class="product-card__title subtitle">
                                 Don't Forget a Belt!
                             </h3> 
-                            <div class="btn-red">SHOP ALL BELTS</div>
+                            <div class="btn-red to-catalog">SHOP ALL BELTS</div>
                         </li>
                         <li class="sale3__product product-card">
                             <img src="./img/products/swim.png" alt="swim" class="product-card__img">
                             <h3 class="product-card__title subtitle">
                                 Swim Trunk Styles on Sale!
                             </h3> 
-                            <div class="btn-red">SHOP ALL SWIM TRUNKS</div>
+                            <div class="btn-red to-catalog">SHOP ALL SWIM TRUNKS</div>
                         </li>
                         <li class="sale3__product product-card">
                             <img src="./img/products/catalog.png" alt="catalog" class="product-card__img">
                             <h3 class="product-card__title subtitle">
                                 Shop Newest Online Catalog
                             </h3> 
-                            <div class="btn-red">SHOP NEWEST CATALOG</div>
+                            <div class="btn-red to-catalog">SHOP NEWEST CATALOG</div>
                         </li>
                     </ul>
                 </div>
