--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sportif</title>
+    <link rel="stylesheet" href="./css/loader.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <script src="./code/script.js"></script>
+    <script src="./code/script.js" type="module"></script>
 </head>
 <body>
     <nav>
@@ -323,5 +324,6 @@
             <p class="rights__sign">©2021 Sportif Mailorder. All Rights Reserved.</p>
         </div>
     </div>
+    <div class="loader hide"><div class="lds-ripple"><div></div><div></div></div></div>
 </body>
 </html>
