--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
-    <script src="./code/script.js" type="module"></script>
+    <script src="./code/index.js" type="module"></script>
 </head>
 <body>
     <nav>
